Client tab overflow fix

--- a/VHKPlayerClient/public_html/css/style.css
+++ b/VHKPlayerClient/public_html/css/style.css
@@ -41,6 +41,7 @@ h2{
 
 .tabs{
     height:30px;
+    overflow: auto;
 }
 
 .tabs > ul{
